Fix overflow of very long bot names

--- a/src/app/room/assistant-route/assistants-manage/assistants-manage.component.scss
+++ b/src/app/room/assistant-route/assistants-manage/assistants-manage.component.scss
@@ -42,6 +42,16 @@
   }
 }
 
+mat-card-header {
+  margin-bottom: 15px;
+  display: unset;
+  mat-card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
 mat-divider {
   margin-block: 1em;
 }
